修复 QuestVisualConfigTest Java 17 兼容性（getFirst → get(0)）
Co-Authored-By: Claude <noreply@anthropic.com>